--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.15",
     "@reduxjs/toolkit": "^2.1.0",
     "@types/react-redux": "^7.1.33",
+    "dotenv": "^16.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
