--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1"
   },
